--- a/pkg/nuget/nuspec/Elmah.MongoDB.nuspec
+++ b/pkg/nuget/nuspec/Elmah.MongoDB.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>elmah.mongodb</id>
-    <version>1.2</version>
+    <version>1.2.1</version>
     <title>ELMAH on MongoDB (requires manual config)</title>
     <authors>Simon Green</authors>
     <owners>Simon Green</owners>
@@ -15,6 +15,7 @@
     <tags>mssql elmah error logging unhandled exception</tags>
     <dependencies>
       <dependency id="elmah" version="1.2" />
+      <dependency id="mongocsharpdriver" version="1.3" />
     </dependencies>
   </metadata>
 </package>
