--- a/src/Elmah.MongoDB/packages.config
+++ b/src/Elmah.MongoDB/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="elmah" version="1.2.2" />
   <package id="elmah.corelibrary" version="1.2.2" />
-  <package id="mongocsharpdriver" version="1.4.1" />
+  <package id="mongocsharpdriver" version="1.5" targetFramework="net35" />
 </packages>
