--- a/pkg/nuget/nuspec/Elmah.MongoDB.nuspec
+++ b/pkg/nuget/nuspec/Elmah.MongoDB.nuspec
@@ -9,8 +9,8 @@
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>https://github.com/CaptainCodeman/elmah-mongodb</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. NB requires manual configuration.</description>
-    <summary>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. NB requires manual configuration.</summary>
+    <description>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. NB requires manual configuration. NOTE: The format of the log files has changed, please use a new collection or clear existing entries before using this version.</description>
+    <summary>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. NB requires manual configuration. NOTE: The format of the log files has changed, please use a new collection or clear existing entries before using this version.</summary>
     <language>en-US</language>
     <tags>mongodb elmah error logging unhandled exception</tags>
     <dependencies>
