--- a/pkg/nuget/nuspec/Elmah.MongoDB.nuspec
+++ b/pkg/nuget/nuspec/Elmah.MongoDB.nuspec
@@ -3,14 +3,14 @@
   <metadata>
     <id>elmah.mongodb</id>
     <version>1.7</version>
-    <title>ELMAH on MongoDB (requires manual config)</title>
-    <authors>Simon Green</authors>
+    <title>ELMAH on MongoDB for iPaaS</title>
+    <authors>Simon Green (original), pf-iPaaS</authors>
     <owners>Simon Green</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
-    <projectUrl>https://github.com/CaptainCodeman/elmah-mongodb</projectUrl>
+    <projectUrl>https://github.com/PF-iPaaS/elmah-mongodb</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. NB requires manual configuration. NOTE: The format of the log files has changed, please use a new collection or clear existing entries before using this version.</description>
-    <summary>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. NB requires manual configuration. NOTE: The format of the log files has changed, please use a new collection or clear existing entries before using this version.</summary>
+    <description>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. </description>
+    <summary>ELMAH with configuration for getting started quickly on a MongoDB database as the error log. </summary>
     <language>en-US</language>
     <tags>mongodb elmah error logging unhandled exception</tags>
     <dependencies>
