--- a/src/Elmah.MongoDB/packages.config
+++ b/src/Elmah.MongoDB/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="elmah" version="1.2.2" />
   <package id="elmah.corelibrary" version="1.2.2" />
-  <package id="mongocsharpdriver" version="1.7" targetFramework="net35" />
+  <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
 </packages>
