Updating how it is serialized,  doesn't keep duplicate keys or values

--- a/src/Elmah.MongoDB.Sample/Web.config
+++ b/src/Elmah.MongoDB.Sample/Web.config
@@ -15,7 +15,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="elmah-mongodb" connectionString="mongodb://localhost/elmah?w=0" />
+    <add name="elmah-mongodb" connectionString="mongodb://remote:7CrazyIdea@mongo1.beta.cityspark.com:27017/elmah?w=0" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
