--- a/src/Elmah.MongoDB/packages.config
+++ b/src/Elmah.MongoDB/packages.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net452" />
+  <package id="DnsClient" version="1.3.2" targetFramework="net46" />
   <package id="elmah" version="1.2.2" />
   <package id="elmah.corelibrary" version="1.2.2" />
-  <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
-  <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
-  <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.10.4" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.10.4" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.10.4" targetFramework="net452" />
+  <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net452" />
+  <package id="SharpCompress" version="0.25.1" targetFramework="net46" />
+  <package id="Snappy.NET" version="1.1.1.8" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net46" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
 </packages>
